# dataset_catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
dataset_catalog/: __init__.py
dataset_catalog/erddap/: __init__.py  erddap_datasets.py
dataset_catalog/erddap/dataset/: __init__.py  attributes.py  base.py  variables.py
dataset_catalog/erddap/dataset/grid/: __init__.py  base.py  from_aggregate_existing_dimension.py  from_audio_files.py  from_copy.py  from_dap.py  from_edd_table.py  from_erddap.py  from_etopo.py  from_files.py  from_lon_pm_180.py  from_lon_pm_360.py  from_merge_ir_files.py  from_nc_files.py  from_nc_files_unpacked.py  from_side_by_side.py
dataset_catalog/erddap/dataset/table/: __init__.py  base.py  from_ascii_files.py  from_erddap.py  from_multi_dim_nc_files.py  from_nc_cf_files.py  from_nc_files.py  from_thredds_files.py
docs/source/: conf.py
tests/: test_dataset_catalog.py
tests/erddap/examples/grid/: from_nc_files.xml
tests/erddap/examples/table/: from_ascii_files.xml  from_erddap.xml  from_multi_dim_nc_files.xml  from_nc_cf_files.xml  from_nc_files.xml  from_thredds_files.xml
tests/erddap/grid/: test_from_nc_files.py
