[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[project]
name = "dataset-catalog"
description = "Programmatically generate and load ERDDAP datasets.xml"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Alex Kerney", email = "abk@mac.com" }]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = [
  "version",
]
dependencies = [
  "pydantic-xml>=2.1",
  "xarray",
]
[project.urls]
documentation = "https://ioos.github.io/ioos-python-package-skeleton"
homepage = "https://github.com/ioos/ioos-python-package-skeleton"
repository = "https://github.com/ioos/ioos-python-package-skeleton"

[tool.setuptools]
packages = ["dataset_catalog"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "dataset_catalog/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.ruff]
select = [
  "F", # flakes
  "I", # import sorting
  "U", # upgrade
]
# target-version = "py39"
line-length = 79

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E402"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.codespell]
skip = 'tests/erddap/examples'
